--- a/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
+++ b/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
@@ -11,7 +11,7 @@
     Title="Terrain/Object"
     d:DataContext="{d:DesignInstance viewmodels:TerrainsViewModel,
                                      IsDesignTimeCreatable=False}"
-    d:DesignHeight="800"
+    d:DesignHeight="1200"
     d:DesignWidth="1200"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
@@ -63,7 +63,7 @@
                         FontSize="16"
                         FontWeight="SemiBold"
                         Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                        Text="No Model Available" />
+                        Text="No Texture Available" />
                     <TextBlock
                         MaxWidth="250"
                         Foreground="{DynamicResource TextFillColorSecondaryBrush}"
@@ -316,43 +316,6 @@
                                     Content="{Binding}"
                                     ContentTemplate="{StaticResource ModelWarningTemplate}"
                                     Visibility="{Binding HasModelViewerError, Converter={StaticResource BoolToVis}}" />
-                                <ui:Button
-                                    Margin="0,5,5,0"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Top"
-                                    Panel.ZIndex="1"
-                                    Background="{DynamicResource ControlFillColorDefaultBrush}"
-                                    BorderBrush="{DynamicResource ControlElevationBorderBrush}"
-                                    Command="{Binding ShowReferenceModelContentDialogCommand}"
-                                    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                    ToolTip="Reference Model">
-                                    <ui:SymbolIcon Symbol="ImageReflection24" />
-                                </ui:Button>
-                                <!--  Play/Pause Buttons  -->
-                                <StackPanel
-                                    Margin="5"
-                                    HorizontalAlignment="Left"
-                                    VerticalAlignment="Top"
-                                    Panel.ZIndex="1"
-                                    Orientation="Horizontal">
-                                    <ui:Button
-                                        Margin="0,0,5,0"
-                                        Background="{DynamicResource ControlFillColorDefaultBrush}"
-                                        BorderBrush="{DynamicResource ControlElevationBorderBrush}"
-                                        Command="{Binding PlayModelCommand}"
-                                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                        ToolTip="Play">
-                                        <ui:SymbolIcon Symbol="Play24" />
-                                    </ui:Button>
-                                    <ui:Button
-                                        Background="{DynamicResource ControlFillColorDefaultBrush}"
-                                        BorderBrush="{DynamicResource ControlElevationBorderBrush}"
-                                        Command="{Binding PauseModelCommand}"
-                                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                        ToolTip="Pause">
-                                        <ui:SymbolIcon Symbol="Pause24" />
-                                    </ui:Button>
-                                </StackPanel>
                             </Grid>
                         </Border>
                     </Grid>
